test/expected/explain_cast_ai.out
explain (auto int)x
              ^
15: error: can not cast into auto
